Import of MKUTTER/Test-Pod-Content-v0.0.4 from CPAN.
gitpan-cpan-distribution: Test-Pod-Content
gitpan-cpan-version:      v0.0.4
gitpan-cpan-path:         MKUTTER/Test-Pod-Content-v0.0.4.tar.gz
gitpan-cpan-author:       MKUTTER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.0.4
+- added kwalitee tests
+- fixed a POD error
+
+0.0.3
+- added "version" to prereqs
+- added .perlcriticrc
+- updated docs and code to allow perlcritic -1 to pass (with .perlcriticrc)
+
 0.0.2 - Dec 25 2007
 - updated tests
 - updated docs
